--- a/bases/src/app/app.component.html
+++ b/bases/src/app/app.component.html
@@ -19,5 +19,6 @@
     <span>{{ title }}-<b>{{subtitle}}</b></span>    
   </div>
   <app-padre />
+  <app-hermano />
 
   <router-outlet></router-outlet>
